--- a/src/app/(mdx)/(top)/page.mdx
+++ b/src/app/(mdx)/(top)/page.mdx
@@ -1,14 +1,11 @@
 ## Features
 
-- [Next.js v14 (App Router)][Next.js]
-- [Park UI v0][Park UI]
-- [Panda CSS v0][Panda CSS]
-- [Storybook v7][Storybook]
-- [MDX]
-- Dark Mode by [next-themes v0][next-themes]
+- [Next.js] v14 (App Router)
+- [Park UI] v0
+- [Panda CSS] v0
 
 Demo  
-https://cieloazul310.github.io/next-panda-example/
+https://cieloazul310.github.io/nextjs-park-ui/
 
 ## Project structure
 
@@ -18,7 +15,7 @@ https://cieloazul310.github.io/next-panda-example/
 ├── src
 │   ├── app // Next.js App Router 
 │   ├── components
-│   ├── lib
+│   ├── lib // for Park UI style context
 │   ├── styles
 │   ├── theme // for Panda config
 │   ├── utils
@@ -33,17 +30,11 @@ https://cieloazul310.github.io/next-panda-example/
 
 ## Referrences
 
-Next.js - Example app with Storybook  
-https://github.com/vercel/next.js/tree/canary/examples/with-storybook
-
 Next.js - App dir MDX  
 https://github.com/vercel/next.js/tree/canary/examples/app-dir-mdx
 
 Panda CSS - Next.js (app) example  
 https://github.com/chakra-ui/panda/tree/main/sandbox/next-js-app
-
-Panda CSS - Storybook example  
-https://github.com/chakra-ui/panda/tree/main/sandbox/storybook
 
 Panda CSS - Website  
 https://github.com/chakra-ui/panda/tree/main/website
@@ -52,6 +43,3 @@ https://github.com/chakra-ui/panda/tree/main/website
 [Park UI]: https://park-ui.com/
 [Ark UI]: https://ark-ui.com/
 [Panda CSS]: https://panda-css.com/
-[Storybook]: https://storybook.js.org/
-[MDX]: https://mdxjs.com/
-[next-themes]: https://github.com/pacocoursey/next-themes
