--- a/src/app/(mdx)/mdx-preview/page.mdx
+++ b/src/app/(mdx)/mdx-preview/page.mdx
@@ -1,8 +1,8 @@
 export const metadata = {
-  title: 'About',
+  title: 'MDX Preview',
 }
 
-## About
+## MDX Preview
 
 This page is built by MDX.
 
