--- a/src/app/(mdx)/(top)/page.mdx
+++ b/src/app/(mdx)/(top)/page.mdx
@@ -28,7 +28,7 @@ https://cieloazul310.github.io/nextjs-park-ui/
 └── tsconfig.json
 ```
 
-## Referrences
+## References
 
 Next.js - App dir MDX  
 https://github.com/vercel/next.js/tree/canary/examples/app-dir-mdx
